--- a/game_files/settings.json
+++ b/game_files/settings.json
@@ -1,4 +1,8 @@
 {
     "default colourmode": 1,
-    "font": "arial"
+    "font": "arial",
+    "keyboard font size": 8,
+    "word font size": 13,
+    "keyboard size": [5, 2],
+    "word size": [4, 2]
 }
