more stuff in json, fixed feedback on game over

--- a/game_files/settings.json
+++ b/game_files/settings.json
@@ -3,6 +3,12 @@
     "font": "arial",
     "keyboard font size": 8,
     "word font size": 13,
-    "keyboard size": [5, 2],
-    "word size": [4, 2]
+    "keyboard size": [
+        5,
+        2
+    ],
+    "word size": [
+        4,
+        2
+    ]
 }
